fix: wrap(responsiveness) in profile view

--- a/src/common/CButton/CButton.css
+++ b/src/common/CButton/CButton.css
@@ -1,5 +1,4 @@
 .cButtonDesign {
-    margin: 2em;
 
     display: flex;
     justify-content: center;
@@ -8,21 +7,27 @@
     color: teal;
     font-weight: bold;
 
-    transition: 0.2s;
-}
-
-.cButtonDesign:hover {
-
     cursor: pointer;
     transition: 0.2s;
-    font-weight: light;
-    color: black;
+    margin-top: 2em;
 }
 
-/* .cButtonGreen {
-    background-color: green;
-}
 
-.cButtonGreen:hover {
-    background-color: darkgreen;
-} */
+.cButtonGreen {
+    color: green;
+    cursor: pointer;
+    transition: 0.2s;
+    border: 0.02em solid green;
+    border-radius: 0.5em;
+    /* height: 3em;*/
+    width: fit-content;
+    margin: 2em 0 0 6.5em;
+    height: 2em;
+    width: 10em;
+
+    border: 0.02em solid teal;
+    border-radius: 0.5em;
+    background-color: whitesmoke;
+
+
+}
