--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,10 @@
 .homeDesign {
-    height: 86.5vh;
+    min-height: 86.5vh;
     width: 100vw;
 
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
